@@ -1,4 +1,4 @@
-\version "2.1.11"
+\version "2.1.13"
 foollilypondbook = "
 \score
 "
@@ -9,5 +9,5 @@ foollilypondbook = "
 
 
 
-#(set-staff-size 16)
+#(set-global-staff-size 16)
 \include "allfontstyle.lyinc"
