@@ -1,5 +1,5 @@
 
-\version "2.1.11"
+\version "2.1.13"
 
 
 % Ugh, we need to override some LaTeX titling stuff
@@ -16,7 +16,7 @@ texidoc = "@cindex Orchestra Score
 Demonstration of how to set up an orchestral score (Beethoven's Coriolan overture).
 " }
 
-#(set-staff-size 16)
+#(set-global-staff-size 16)
 
 raisedFlat = \markup { \raise #0.4 \smaller \smaller \musicglyph #"accidentals--1"  }
 
