@@ -1,10 +1,10 @@
 % Toplevel initialisation file. 
 	
-\version "2.1.11"
+\version "2.1.13"
 
 
 \include "declarations-init.ly"
-#(set-staff-size 16)
+#(set-global-staff-size 16)
 
  \paper{
 	\paperSixteen
