@@ -1695,7 +1695,7 @@ conversions.append (((2,1,12), conv, """OttavaSpanner -> OttavaBracket"""))
 
 
 def conv (str):
-	str =re.sub (r"\(set-staff-size ", r"(set-global-staff-size", str)
+	str =re.sub (r"\(set-staff-size ", r"(set-global-staff-size ", str)
 	return str
 
 conversions.append (((2,1,13), conv, """set-staff-size -> set-global-staff-size"""))
