@@ -726,7 +726,7 @@ def compose_full_body (body, opts):
 	body = r'''
 %% Generated automatically by: lilypond-book.py
 %% options are %s
-#(set-staff-size %d)
+#(set-global-staff-size %d)
 
 \paper  {
   %s
